// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Telemarketing /> component should match snapshot with client 1`] = `
<DocumentFragment>
  <section
    class="Container-mock container flex justify-center tc c-on-emphasis h2 t-mini pa2 bg-emphasis"
  >
    <div
      class="flex justify-between w-100 mw9"
    >
      <div
        class="flex pl3 w-50 items-center c-on-base--inverted"
      >
        <svg
          class="IconAssistantSales-mock  "
          height="20"
          width="20"
        >
          <rect
            height="20"
            width="20"
          />
        </svg>
        <div
          class="ml2"
        >
          Attendant
          <span>
            : attendant@vtex.com
          </span>
        </div>
      </div>
      <div
        class="logout false"
      >
        <div
          class="popoverContainer relative flex h-100 items-center pr4"
        >
          <div
            class="pointer w-100"
          >
            <div
              class="c-on-base--inverted flex align-center"
            >
              <svg
                class="IconProfile-mock  "
                height="20"
                width="20"
              >
                <rect
                  height="20"
                  width="20"
                />
              </svg>
              <div
                class="pa2 clientNameBar w-100"
              >
                client@vtex.com
              </div>
            </div>
          </div>
          <div
            class="popoverBox absolute top-2 z-max bb b--muted-3 dn"
          >
            <div
              class="popoverContentContainer mt3-ns bg-base shadow-3-ns"
            >
              <div
                class="bg-emphasis w-100 pa7"
              >
                <div
                  class="popoverHeaderIcon c-on-base--inverted"
                >
                  <svg
                    class="IconAssistantSales-mock  "
                    height="50"
                    width="50"
                  >
                    <rect
                      height="50"
                      width="50"
                    />
                  </svg>
                </div>
                <div
                  class="popoverHeaderEmail c-on-emphasis"
                >
                  attendant@vtex.com
                </div>
              </div>
              <div
                class="bg-base w-100 pt7 pb5 ph5"
              >
                <div
                  class="logoutForm c-disabled"
                >
                  <div
                    class="w-100 bw1 bb b--muted-5 flex-wrap"
                  >
                    <div
                      class="clientName w-100 t-heading-5 center pb5 c-on-base"
                    >
                      name
                    </div>
                    <div
                      class="w-100 flex flex-wrap t-small"
                    >
                      <div
                        class="tl pb5 pr2"
                      >
                        Email
                      </div>
                      <div
                        class="pb5 pl2 c-muted-3"
                      >
                        client@vtex.com
                      </div>
                    </div>
                    <div
                      class="w-100 flex flex-wrap t-small"
                    >
                      <div
                        class="tl pb5 pr2"
                      >
                        Document
                      </div>
                      <div
                        class="pb5 pl2 c-muted-3"
                      >
                        document
                      </div>
                    </div>
                    <div
                      class="w-100 flex flex-wrap t-small"
                    >
                      <div
                        class="tl pb5 pr2"
                      >
                        Phone
                      </div>
                      <div
                        class="pb5 pl2 c-muted-3"
                      >
                        phone
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex justify-around mt5"
                  >
                    <a
                      href="store.account"
                    >
                      <button
                        type="button"
                      >
                        Orders
                      </button>
                    </a>
                    <button
                      type="button"
                    >
                      Logout
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="popoverArrowUp absolute top-0 rotate-135 dib-ns dn-s bg-emphasis"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Telemarketing /> component should match snapshot without client 1`] = `
<DocumentFragment>
  <section
    class="Container-mock container flex justify-center tc c-on-emphasis h2 t-mini pa2 bg-base--inverted"
  >
    <div
      class="flex justify-between w-100 mw9"
    >
      <div
        class="flex pl3 w-50 items-center c-on-base--inverted"
      >
        <svg
          class="IconAssistantSales-mock  "
          height="20"
          width="20"
        >
          <rect
            height="20"
            width="20"
          />
        </svg>
        <div
          class="ml2"
        >
          Attendant
          <span>
            : attendant@vtex.com
          </span>
        </div>
      </div>
      <div
        class="login false"
      >
        <div
          class="popoverContainer relative flex h-100 items-center pr4"
        >
          <div
            class="pointer w-100"
          >
            <div
              class="flex items-center c-on-base--inverted"
            >
              <svg
                class="IconProfile-mock  "
                height="20"
                width="20"
              >
                <rect
                  height="20"
                  width="20"
                />
              </svg>
              <div
                class="ml2"
              >
                Login as
              </div>
            </div>
          </div>
          <div
            class="popoverBox absolute top-2 z-max bb b--muted-3 dn"
          >
            <div
              class="popoverContentContainer mt3-ns bg-base shadow-3-ns"
            >
              <div
                class="bg-base--inverted w-100 pa7 c-on-base--inverted"
              >
                <div
                  class="popoverHeaderIcon"
                >
                  <svg
                    class="IconAssistantSales-mock  "
                    height="50"
                    width="50"
                  >
                    <rect
                      height="50"
                      width="50"
                    />
                  </svg>
                </div>
                <div
                  class="popoverHeaderEmail white-50 mt3"
                >
                  attendant@vtex.com
                </div>
              </div>
              <div
                class="bg-base w-100 ph5 pb5 pt7"
              >
                <div
                  class="loginForm c-disabled"
                >
                  <div
                    class="loginFormMessage t-small tl mb3"
                  >
                    Login as
                  </div>
                  <div
                    class="emailInput mb5"
                  >
                    <input
                      placeholder="Ex: example@mail.com"
                      value="email@vtex.com"
                    />
                  </div>
                  <button
                    type="button"
                  >
                    Login
                  </button>
                </div>
              </div>
            </div>
            <div
              class="popoverArrowUp absolute top-0 rotate-135 dib-ns dn-s bg-base--inverted"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
